--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
